--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>github avatar</title>
+        <title>Movie</title>
 
         <!-- styles -->
          <link rel="stylesheet" href="styles.css" /> 
@@ -11,18 +11,43 @@
     <body>
         <main id="main">
             <ul class="movies">
-                <li class="movie">
-                    <div class="card">
-                        <div class="card__head">
-                            <img src="coffee.jpg" class="card__img" alt="" />
-                        </div>
-                        <div class="card__body">
-                            <h3 class="card__title">Millioner</h3>
-                            <span class="card__ball">8</span>
-                        </div>
-                    </div>
-                </li>
+                
             </ul>
+            <div class="container">
+            <div class="pages">
+                <button type="button" class="control__btn prev">Prev</button>
+                <ul class="pages__lists">
+                    <li class="pages__list">
+                        <button type="button" class="pages__btn">1</button>
+                    </li>
+                    <li class="pages__list">
+                        <button type="button" class="pages__btn">2</button>
+                    </li>
+                    <li class="pages__list">
+                        <button type="button" class="pages__btn">3</button>
+                    </li>
+                    <li class="pages__list">
+                        <button type="button" class="pages__btn">4</button>
+                    </li>
+                    <li class="pages__list">
+                        <button type="button" class="pages__btn">5</button>
+                    </li>
+                    <li class="pages__list">
+                        <button type="button" class="pages__btn">6</button>
+                    </li>
+                    <li class="pages__list">
+                        <button type="button" class="pages__btn">7</button>
+                    </li>
+                    <li class="pages__list">
+                        <button type="button" class="pages__btn">8</button>
+                    </li>
+                    <li class="pages__list">
+                        <button type="button" class="pages__btn">9</button>
+                    </li>
+                </ul>
+                <button type="button" class="control__btn next">Next</button>
+            </div>
+            </div>
         </main>
         <script src="app.js"></script>
     </body>
