--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                     <li class="pages__list">
                         <button type="button" class="pages__btn">9</button>
                     </li>
+                    <li class="pages__list">
+                        <button type="button" class="pages__btn">10</button>
+                    </li>
+                    <li class="pages__list">
+                        <button type="button" class="pages__btn">11</button>
+                    </li>
                 </ul>
                 <button type="button" class="control__btn next">Next</button>
             </div>
