--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             <ul class="movies">
                 
             </ul>
+            <div class="pagination">
+                <ul class="pages">
+                    
+                </ul>
+            </div>
         </main>
         <script src="app.js"></script>
     </body>
