--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
          <link rel="stylesheet" href="styles.css" /> 
     </head>
     <body>
+        <header class="main-header">
+            <div class="container">
+                <form class="search-form">
+                    <input type="search" class="search" placeholder="Search" />
+                </form>
+            </div>
+        </header>
         <main id="main">
             <ul class="movies">
                 
